--- a/cart-me/package.json
+++ b/cart-me/package.json
@@ -20,7 +20,14 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ngrx/component": "github:ngrx/component-builds",
+    "@ngrx/data": "^13.0.2",
+    "@ngrx/effects": "^13.0.2",
+    "@ngrx/entity": "^13.0.2",
+    "@ngrx/router-store": "^13.0.2",
+    "@ngrx/store": "^13.0.2",
     "@sweetalert2/ngx-sweetalert2": "^10.0.0",
+    "axios": "^0.26.1",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.6.0",
     "ngx-bootstrap": "^7.1.0",
@@ -33,6 +40,7 @@
     "@angular-devkit/build-angular": "~12.2.9",
     "@angular/cli": "~12.2.9",
     "@angular/compiler-cli": "~12.2.0",
+    "@ngrx/schematics": "^13.0.2",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
