--- a/cart-me/package.json
+++ b/cart-me/package.json
@@ -26,6 +26,7 @@
     "@ngrx/entity": "^13.0.2",
     "@ngrx/router-store": "^13.0.2",
     "@ngrx/store": "^13.0.2",
+    "@ngrx/store-devtools": "^13.0.2",
     "@sweetalert2/ngx-sweetalert2": "^10.0.0",
     "axios": "^0.26.1",
     "bootstrap": "^4.6.0",
