--- a/cart-me/package.json
+++ b/cart-me/package.json
@@ -28,6 +28,7 @@
     "@ngrx/store": "^13.0.2",
     "@ngrx/store-devtools": "^13.0.2",
     "@sweetalert2/ngx-sweetalert2": "^10.0.0",
+    "alertifyjs": "^1.13.1",
     "axios": "^0.26.1",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.6.0",
