--- a/cart-me/package.json
+++ b/cart-me/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@cloudinary/ng": "^1.2.0",
+    "@cloudinary/url-gen": "^1.7.0",
     "@ngrx/component": "github:ngrx/component-builds",
     "@ngrx/data": "^13.0.2",
     "@ngrx/effects": "^13.0.2",
