--- a/cart-me/package.json
+++ b/cart-me/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "test:coverage": "ng test --code-coverage=true"
   },
   "private": true,
   "dependencies": {
