--- a/cart-me/package.json
+++ b/cart-me/package.json
@@ -32,6 +32,7 @@
     "@ngrx/store-devtools": "^13.0.2",
     "@sweetalert2/ngx-sweetalert2": "^10.0.0",
     "alertifyjs": "^1.13.1",
+    "angular4-paystack": "^3.0.2",
     "axios": "^0.26.1",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.6.0",
